Énorme changement de disign

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
 		<meta charset="utf-8">
 		<link href="index.css" rel="stylesheet">
@@ -18,28 +18,78 @@
 		</header>
 
 		<h2>Derniers films ajoutés</h2>
-			<p>
-				<a href="film/black-panther-wakanda-forever-2022/"><img class="affiche" src="film/black-panther-wakanda-forever-2022/couverture.jpg"></a>
-				<a href="film/le-menteur-2022/"><img class="affiche" src="film/le-menteur-2022/couverture.jpg"></a>
-				<a href="film/uncharted-2022/"><img class="affiche" src="film/uncharted-2022/couverture.jpg"></a>
-				<a href="film/bullet-train-2022/"><img class="affiche" src="film/bullet-train-2022/couverture.jpg"/></a>
-				<a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"/></a>
-				<a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"></a>
-				<a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"></a>
-				<a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"></a>
-			</p>	
+			<div>
+				<figure>
+					<a href="film/black-panther-wakanda-forever-2022/"><img class="affiche" src="film/black-panther-wakanda-forever-2022/couverture.jpg">
+					<figcaption>Black Penther: Wakanda Forever</figcaption></a>
+				</figure>
+				<figure>
+					<a href="film/le-menteur-2022/"><img class="affiche" src="film/le-menteur-2022/couverture.jpg">
+					<figcaption>Le Menteur</figcaption></a>
+				</figure>
+				<figure>
+					<a href="film/uncharted-2022/"><img class="affiche" src="film/uncharted-2022/couverture.jpg">
+					<figcaption>Uncharted</figcaption></a>
+				</figure>
+				<figure>
+					<a href="film/bullet-train-2022/"><img class="affiche" src="film/bullet-train-2022/couverture.jpg">
+					<figcaption>Bullet Train</figcaption></a>
+				</figure>
+				<figure>
+					<a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg">
+					<figcaption>Black Adam</figcaption></a>
+				</figure>
+				<figure>
+					<a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg">
+					<figcaption>Black Adam</figcaption></a>
+				</figure>
+				<figure>
+					<a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg">
+					<figcaption>Black Adam</figcaption></a>
+				</figure>
+				<figure>
+					<a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg">
+					<figcaption>Black Adam</figcaption></a>
+				</figure>
+			</div>	
 
 		<h2>Dernières séries ajoutées</h2>
-			<p>
-				<a href="serie/mercredi-2022/"><img class="affiche" src="serie/mercredi-2022/couverture.jpg"></a>
-				<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a>
-				<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a>
-				<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a>
-				<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a>
-				<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a>
-				<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a>
-				<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a>
-			</p>	
+			<div>
+				<figure>
+					<a href="serie/mercredi-2022/"><img class="affiche" src="serie/mercredi-2022/couverture.jpg">
+					<figcaption>Mercredi</figcaption></a>
+				</figure>
+				<figure>
+					<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg">
+					<figcaption>Teen Wolf</figcaption></a>
+				</figure>
+				<figure>
+					<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg">
+					<figcaption>Teen Wolf</figcaption></a>
+				</figure>
+				<figure>
+					<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg">
+					<figcaption>Teen Wolf</figcaption></a>
+				</figure>
+				<figure>
+					<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg">
+					<figcaption>Teen Wolf</figcaption></a>
+				</figure>
+				<figure>
+					<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg">
+					<figcaption>Teen Wolf</figcaption></a>
+				</figure>
+				<figure>
+					<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg">
+					<figcaption>Teen Wolf</figcaption></a>
+				</figure>
+				<figure>
+					<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg">
+					<figcaption>Teen Wolf</figcaption></a>
+				</figure>
+			</div>
+
+		<br>
 
 		<footer>
 			<h3>Tu n'as plus d'idée de film ou de série à regarder ?<br>Demande un <a href="filmrandom/" class="aleatoire"><img src="aléatoire.gif" width="10">film aléatoire<img src="aléatoire.gif" width="10"></a> ou une <a href="serierandom/" class="aleatoire"><img src="aléatoire.gif" width="10">série aléatoire<img src="aléatoire.gif" width="10"></a>.</h3>
