--- a/serie/mercredi-2022/index.html
+++ b/serie/mercredi-2022/index.html
@@ -26,16 +26,41 @@
 
 	<HR ALIGN=CENTER WIDTH="90%" SIZE="4" NOSHADE COLOR="WHITE">
 	<h2 style="color: red;">Saison 1</h2>
-	<p>
-		<a href="saison-1/episode-1/"><img class="affiche" src="Mercredi.jpg" height="200"></a>
-		<a href="saison-1/episode-2/"><img class="affiche" src="Mercredi.jpg" height="200"></a>
-		<a href="saison-1/episode-3/"><img class="affiche" src="Mercredi.jpg" height="200"></a>
-		<a href="saison-1/episode-4/"><img class="affiche" src="Mercredi.jpg" height="200"></a>
-		<a href="saison-1/episode-5/"><img class="affiche" src="Mercredi.jpg" height="200"></a>
-		<a href="saison-1/episode-6/"><img class="affiche" src="Mercredi.jpg" height="200"></a>
-		<a href="saison-1/episode-7/"><img class="affiche" src="Mercredi.jpg" height="200"></a>
-		<a href="saison-1/episode-8/"><img class="affiche" src="Mercredi.jpg" height="200"></a>
-	</p>
+
+	<div style="text-align: center;">
+		<figure>
+			<a href="saison-1/episode-1/"><img class="affiche" src="Mercredi.jpg">
+			<figcaption>Épisode 1</figcaption></a>
+		</figure>
+		<figure>
+			<a href="saison-1/episode-2/"><img class="affiche" src="Mercredi.jpg">
+			<figcaption>Épisode 2</figcaption></a>
+		</figure>
+		<figure>
+			<a href="saison-1/episode-3/"><img class="affiche" src="Mercredi.jpg">
+			<figcaption>Épisode 3</figcaption></a>
+		</figure>
+		<figure>
+			<a href="saison-1/episode-4/"><img class="affiche" src="Mercredi.jpg">
+			<figcaption>Épisode 4</figcaption></a>
+		</figure>
+		<figure>
+			<a href="saison-1/episode-5/"><img class="affiche" src="Mercredi.jpg">
+			<figcaption>Épisode 5</figcaption></a>
+		</figure>
+		<figure>
+			<a href="saison-1/episode-6/"><img class="affiche" src="Mercredi.jpg">
+			<figcaption>Épisode 6</figcaption></a>
+		</figure>
+		<figure>
+			<a href="saison-1/episode-7/"><img class="affiche" src="Mercredi.jpg">
+			<figcaption>Épisode 7</figcaption></a>
+		</figure>
+		<figure>
+			<a href="saison-1/episode-8/"><img class="affiche" src="Mercredi.jpg">
+			<figcaption>Épisode 8</figcaption></a>
+		</figure>
+	</div>
 
 	<br>
 
