Ajout Top Gun : Maverick

--- a/filmrandom/index.html
+++ b/filmrandom/index.html
@@ -19,6 +19,8 @@
             variable("/gigastream/film/le-menteur-2022/index.html");
             if (a==5)
             variable("/gigastream/film/uncharted-2022/index.html");
+            if (a==6)
+            variable("/gigastream/film/top-gun-maverick-2022/index.html");
             }
             </script>
         <meta charset="utf-8">
