--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 		<h2>Derniers films ajoutés</h2>
 			<div>
 				<figure>
+					<a href="film/top-gun-maverick-2022/"><img class="affiche" src="film/top-gun-maverick-2022/couverture.jpg">
+					<figcaption>Top Gun</figcaption></a>
+				</figure>
+				<figure>
 					<a href="film/black-panther-wakanda-forever-2022/"><img class="affiche" src="film/black-panther-wakanda-forever-2022/couverture.jpg">
 					<figcaption>Black Penther: Wakanda Forever</figcaption></a>
 				</figure>
@@ -34,10 +38,6 @@
 				<figure>
 					<a href="film/bullet-train-2022/"><img class="affiche" src="film/bullet-train-2022/couverture.jpg">
 					<figcaption>Bullet Train</figcaption></a>
-				</figure>
-				<figure>
-					<a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg">
-					<figcaption>Black Adam</figcaption></a>
 				</figure>
 				<figure>
 					<a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg">
