Ajout The Batman

--- a/rechercher/index.html
+++ b/rechercher/index.html
@@ -27,6 +27,7 @@
 		<ul class="titre"><a href="../film/black-panther-wakanda-forever-2022/">Black Panther: Wakanda Forever</a></ul>
 		<ul class="titre"><a href="../film/bullet-train-2022/">Bullet Train</a></ul>
 		<ul class="titre"><a href="../film/le-menteur-2022/">Le Menteur</a></ul>
+		<ul class="titre"><a href="../film/the-batman-2022/">The Batman</a></ul>
 		<ul class="titre"><a href="../film/top-gun-maverick-2022/">Top Gun : Maverick</a></ul>
 		<ul class="titre"><a href="../film/uncharted-2022/">Uncharted</a></ul>
 	</ol>
