--- a/filmrandom/index.html
+++ b/filmrandom/index.html
@@ -21,6 +21,8 @@
             variable("/gigastream/film/uncharted-2022/index.html");
             if (a==6)
             variable("/gigastream/film/top-gun-maverick-2022/index.html");
+            if (a==7)
+            variable("/gigastream/film/the-batman-2022/index.html");
             }
             </script>
         <meta charset="utf-8">
