Ajout Les Minions 2 : Il était une fois Gru

--- a/filmrandom/index.html
+++ b/filmrandom/index.html
@@ -23,6 +23,8 @@
             variable("/gigastream/film/top-gun-maverick-2022/index.html");
             if (a==7)
             variable("/gigastream/film/the-batman-2022/index.html");
+            if (a==8)
+            variable("/gigastream/film/les-minions-2-il-etait-une-fois-gru-2022/index.html");
             }
             </script>
         <meta charset="utf-8">
