--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 		<h2>Derniers films ajoutés</h2>
 			<div>
 				<figure>
+					<a href="film/les-minions-2-il-etait-une-fois-gru-2022/"><img class="affiche" src="film/les-minions-2-il-etait-une-fois-gru-2022/couverture.jpg">
+					<figcaption>Les Minions 2 : Il était une fois Gru</figcaption></a>
+				</figure>
+				<figure>
 					<a href="film/the-batman-2022/"><img class="affiche" src="film/the-batman-2022/couverture.jpg">
 					<figcaption>The Batman</figcaption></a>
 				</figure>
@@ -43,10 +47,6 @@
 				<figure>
 					<a href="film/bullet-train-2022/"><img class="affiche" src="film/bullet-train-2022/couverture.jpg">
 					<figcaption>Bullet Train</figcaption></a>
-				</figure>
-				<figure>
-					<a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg">
-					<figcaption>Black Adam</figcaption></a>
 				</figure>
 				<figure>
 					<a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg">
