--- a/rechercher/index.html
+++ b/rechercher/index.html
@@ -24,6 +24,7 @@
 	
 	<h1>Films</h1>
 	<ol id='ListFilm'>
+		<ul class="titre"><a href="../film/avatar-2009/">Avatar</a></ul>
 		<ul class="titre"><a href="../film/black-adam-2022/">Black Adam</a></ul>
 		<ul class="titre"><a href="../film/black-panther-wakanda-forever-2022/">Black Panther: Wakanda Forever</a></ul>
 		<ul class="titre"><a href="../film/bullet-train-2022/">Bullet Train</a></ul>
