--- a/filmrandom/index.html
+++ b/filmrandom/index.html
@@ -25,6 +25,8 @@
             variable("/gigastream/film/the-batman-2022/index.html");
             if (a==8)
             variable("/gigastream/film/les-minions-2-il-etait-une-fois-gru-2022/index.html");
+            if (a==9)
+            variable("/gigastream/film/avatar-2009/index.html");
             }
             </script>
         <meta charset="utf-8">
