Ajout Sundays at Tiffany's

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 		<h2>Derniers films ajoutés</h2>
 			<div>
 				<figure>
+					<a href="film/sundays-at-tiffany-s-2010/"><img class="affiche" src="film/sundays-at-tiffany-s-2010/couverture.jpg">
+					<figcaption>Sundays at Tiffany's</figcaption></a>
+				</figure>
+				<figure>
 					<a href="film/avatar-2009/"><img class="affiche" src="film/avatar-2009/couverture.jpg">
 					<figcaption>Avatar</figcaption></a>
 				</figure>
@@ -47,10 +51,6 @@
 				<figure>
 					<a href="film/uncharted-2022/"><img class="affiche" src="film/uncharted-2022/couverture.jpg">
 					<figcaption>Uncharted</figcaption></a>
-				</figure>
-				<figure>
-					<a href="film/bullet-train-2022/"><img class="affiche" src="film/bullet-train-2022/couverture.jpg">
-					<figcaption>Bullet Train</figcaption></a>
 				</figure>
 			</div>	
 
