--- a/rechercher/index.html
+++ b/rechercher/index.html
@@ -30,6 +30,7 @@
 		<ul class="titre"><a href="../film/bullet-train-2022/">Bullet Train</a></ul>
 		<ul class="titre"><a href="../film/le-menteur-2022/">Le Menteur</a></ul>
 		<ul class="titre"><a href="../film/les-minions-2-il-etait-une-fois-gru-2022/">Les Minions 2 : Il était une fois Gru</a></ul>
+		<ul class="titre"><a href="../film/sundays-at-tiffany-s-2010/">Sundays at Tiffany's</a></ul>
 		<ul class="titre"><a href="../film/the-batman-2022/">The Batman</a></ul>
 		<ul class="titre"><a href="../film/top-gun-maverick-2022/">Top Gun : Maverick</a></ul>
 		<ul class="titre"><a href="../film/uncharted-2022/">Uncharted</a></ul>
