--- a/rechercher/index.html
+++ b/rechercher/index.html
@@ -38,8 +38,9 @@
 
 	<h1>Séries</h1>
 	<ol id='ListSerie'>
-		<ul class="titre"><a href="../serie/teen-wolf-2011/">Teen Wolf</a></ul>
 		<ul class="titre"><a href="../serie/mercredi-2022/">Mercredi</a></ul>
+		<ul class="titre"><a href="../serie/teen-wolf-2011/">Teen Wolf</a></ul>
+		<ul class="titre"><a href="../serie/the-end-of-the-f***ing-world-2017/">TRhe End Of The F***ing World</a></ul>
 	</ol>
 
 	<footer>
