--- a/serierandom/index.html
+++ b/serierandom/index.html
@@ -8,11 +8,13 @@
             function LienAuHasard()
             {
             var a;
-            a = 1+Math.round(Math.random()*1);
+            a = 1+Math.round(Math.random()*2);
             if (a==1)
             variable("/gigastream/serie/teen-wolf-2011/");
             if (a==2)
             variable("/gigastream/serie/mercredi-2022/");
+            if (a==3)
+            variable("/gigastream/serie/the-end-of-the-f***ing-world-2017/");
             }
             </script>
         <meta charset="utf-8">
