--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
 		<h2>Dernières séries ajoutées</h2>
 			<div>
 				<figure>
+					<a href="serie/ginny-et-georgia-2021/"><img class="affiche" src="serie/ginny-et-georgia-2021/couverture.jpg">
+					<figcaption>Ginny et Georgia</figcaption></a>
+				</figure>
+				<figure>
 					<a href="serie/the-end-of-the-f***ing-world-2017/"><img class="affiche" src="serie/the-end-of-the-f***ing-world-2017/couverture.jpg">
 					<figcaption>The End Of The F***ing World</figcaption></a>
 				</figure>
 				<figure>
 					<a href="serie/mercredi-2022/"><img class="affiche" src="serie/mercredi-2022/couverture.jpg">
 					<figcaption>Mercredi</figcaption></a>
-				</figure>
-				<figure>
-					<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg">
-					<figcaption>Teen Wolf</figcaption></a>
 				</figure>
 				<figure>
 					<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg">
