Ajout série Outer Banks 2020

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 		<h2>Dernières séries ajoutées</h2>
 			<div>
 				<figure>
+					<a href="serie/outer-banks-2020/"><img class="affiche" src="serie/outer-banks-2020/couverture.jpg">
+					<figcaption>Outer Banks</figcaption></a>
+				</figure>
+				<figure>
 					<a href="serie/ginny-et-georgia-2021/"><img class="affiche" src="serie/ginny-et-georgia-2021/couverture.jpg">
 					<figcaption>Ginny et Georgia</figcaption></a>
 				</figure>
@@ -67,10 +71,6 @@
 				<figure>
 					<a href="serie/mercredi-2022/"><img class="affiche" src="serie/mercredi-2022/couverture.jpg">
 					<figcaption>Mercredi</figcaption></a>
-				</figure>
-				<figure>
-					<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg">
-					<figcaption>Teen Wolf</figcaption></a>
 				</figure>
 				<figure>
 					<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg">
