--- a/serierandom/index.html
+++ b/serierandom/index.html
@@ -8,7 +8,7 @@
             function LienAuHasard()
             {
             var a;
-            a = 1+Math.round(Math.random()*3);
+            a = 1+Math.round(Math.random()*4);
             if (a==1)
             variable("/gigastream/serie/teen-wolf-2011/");
             if (a==2)
@@ -17,6 +17,8 @@
             variable("/gigastream/serie/the-end-of-the-f***ing-world-2017/");
             if (a==4)
             variable("/gigastream/serie/ginny-et-georgia-2021/");
+            if (a==5)
+            variable("/gigastream/serie/outer-banks-2020/");
             }
             </script>
         <meta charset="utf-8">
