--- a/filmrandom/index.html
+++ b/filmrandom/index.html
@@ -29,6 +29,8 @@
             variable("/gigastream/film/avatar-2009/index.html");
             if (a==10)
             variable("/gigastream/film/sundays-at-tiffany-s-2010/index.html");
+            if (a==11)
+            variable("/gigastream/film/yes-day-2021/index.html");
             }
             </script>
         <meta charset="utf-8">
