--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 		<h2>Derniers films ajoutés</h2>
 			<div>
 				<figure>
+					<a href="film/yes-day-2021/"><img class="affiche" src="film/yes-day-2021/couverture.jpg">
+					<figcaption>Yes Day</figcaption></a>
+				</figure>
+				<figure>
 					<a href="film/sundays-at-tiffany-s-2010/"><img class="affiche" src="film/sundays-at-tiffany-s-2010/couverture.jpg">
 					<figcaption>Sundays at Tiffany's</figcaption></a>
 				</figure>
@@ -47,10 +51,6 @@
 				<figure>
 					<a href="film/le-menteur-2022/"><img class="affiche" src="film/le-menteur-2022/couverture.jpg">
 					<figcaption>Le Menteur</figcaption></a>
-				</figure>
-				<figure>
-					<a href="film/uncharted-2022/"><img class="affiche" src="film/uncharted-2022/couverture.jpg">
-					<figcaption>Uncharted</figcaption></a>
 				</figure>
 			</div>	
 
