--- a/rechercher/index.html
+++ b/rechercher/index.html
@@ -34,6 +34,7 @@
 		<ul class="titre"><a href="../film/the-batman-2022/">The Batman</a></ul>
 		<ul class="titre"><a href="../film/top-gun-maverick-2022/">Top Gun : Maverick</a></ul>
 		<ul class="titre"><a href="../film/uncharted-2022/">Uncharted</a></ul>
+		<ul class="titre"><a href="../film/yes-day-2021/">Yes Day</a></ul>
 	</ol>
 
 	<h1>Séries</h1>
